[DROOLS-7053] Migrate remaining tests to assertj (#4540)