@@ -39,18 +39,14 @@ import org.junit.Test;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.drools.scenariosimulation.backend.runner.model.ValueWrapper.errorEmptyMessage;
 import static org.drools.scenariosimulation.backend.runner.model.ValueWrapper.of;
 import static org.drools.scenariosimulation.backend.util.ScenarioBeanUtil.convertValue;
 import static org.drools.scenariosimulation.backend.util.ScenarioBeanUtil.getField;
 import static org.drools.scenariosimulation.backend.util.ScenarioBeanUtil.loadClass;
 import static org.drools.scenariosimulation.backend.util.ScenarioBeanUtil.revertValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertTrue;
 
 public class ScenarioBeanUtilTest {
 
@@ -66,11 +62,11 @@ public class ScenarioBeanUtilTest {
 
         Object result = ScenarioBeanUtil.fillBean(errorEmptyMessage(), Dispute.class.getCanonicalName(), paramsToSet, classLoader);
 
-        assertTrue(result instanceof Dispute);
+        assertThat(result instanceof Dispute).isTrue();
 
         Dispute dispute = (Dispute) result;
-        assertEquals(dispute.getCreator().getFirstName(), FIRST_NAME);
-        assertEquals(dispute.getCreator().getAge(), AGE);
+        assertThat(FIRST_NAME).isEqualTo(dispute.getCreator().getFirstName());
+        assertThat(AGE).isEqualTo(dispute.getCreator().getAge());
     }
 
     @Test
@@ -83,11 +79,11 @@ public class ScenarioBeanUtilTest {
 
         Object result = ScenarioBeanUtil.fillBean(of(dispute), Dispute.class.getCanonicalName(), paramsToSet, classLoader);
 
-        assertTrue(result instanceof Dispute);
-        assertSame(dispute, result);
+        assertThat(result instanceof Dispute).isTrue();
+        assertThat(result).isSameAs(dispute);
 
-        assertEquals(dispute.getCreator().getFirstName(), FIRST_NAME);
-        assertEquals(dispute.getCreator().getAge(), AGE);
+        assertThat(FIRST_NAME).isEqualTo(dispute.getCreator().getFirstName());
+        assertThat(AGE).isEqualTo(dispute.getCreator().getAge());
     }
 
     @Test(expected = ScenarioException.class)
@@ -132,7 +128,7 @@ public class ScenarioBeanUtilTest {
         Map<List<String>, Object> paramsToSet = new HashMap<>();
         paramsToSet.put(emptyList(), null);
 
-        assertNull(ScenarioBeanUtil.fillBean(of(null), String.class.getCanonicalName(), paramsToSet, classLoader));
+        assertThat((String) ScenarioBeanUtil.fillBean(of(null), String.class.getCanonicalName(), paramsToSet, classLoader)).isNull();
     }
 
     @Test
@@ -146,9 +142,9 @@ public class ScenarioBeanUtilTest {
         ScenarioBeanWrapper<?> scenarioBeanWrapper = ScenarioBeanUtil.navigateToObject(dispute, pathToProperty, true);
         Object targetObject = scenarioBeanWrapper.getBean();
 
-        assertEquals(targetObject, FIRST_NAME);
+        assertThat(FIRST_NAME).isEqualTo(targetObject);
 
-        assertNull(ScenarioBeanUtil.navigateToObject(null, Collections.emptyList()).getBean());
+        assertThat(ScenarioBeanUtil.navigateToObject(null, Collections.emptyList()).getBean()).isNull();
     }
 
     @Test
@@ -175,190 +171,190 @@ public class ScenarioBeanUtilTest {
 
     @Test
     public void convertValueTest() {
-        assertEquals("Test", convertValue(String.class.getCanonicalName(), "Test", classLoader));
-        assertEquals(BigDecimal.valueOf(13.33), convertValue(BigDecimal.class.getCanonicalName(), "13.33", classLoader));
-        assertEquals(BigDecimal.valueOf(13), convertValue(BigDecimal.class.getCanonicalName(), "13", classLoader));
-        assertEquals(BigDecimal.valueOf(1232113.33), convertValue(BigDecimal.class.getCanonicalName(), "1,232,113.33", classLoader));
-        assertEquals(BigDecimal.valueOf(1232113.33), convertValue(BigDecimal.class.getCanonicalName(), "1232113.33", classLoader));
-        assertEquals(BigInteger.valueOf(13), convertValue(BigInteger.class.getCanonicalName(), "13.33", classLoader));
-        assertEquals(BigInteger.valueOf(13), convertValue(BigInteger.class.getCanonicalName(), "13", classLoader));
-        assertEquals(BigInteger.valueOf(1232113), convertValue(BigInteger.class.getCanonicalName(), "1,232,113.33", classLoader));
-        assertEquals(BigInteger.valueOf(1232113), convertValue(BigInteger.class.getCanonicalName(), "1232113", classLoader));
-        assertEquals(false, convertValue(boolean.class.getCanonicalName(), "false", classLoader));
-        assertEquals(true, convertValue(Boolean.class.getCanonicalName(), "true", classLoader));
-        assertEquals(1, convertValue(int.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1, convertValue(Integer.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1L, convertValue(long.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1L, convertValue(Long.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1.0d, convertValue(double.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1.0d, convertValue(Double.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1.0f, convertValue(float.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1.0f, convertValue(Float.class.getCanonicalName(), "1", classLoader));
-        assertEquals(1.0d, convertValue(double.class.getCanonicalName(), "1.0", classLoader));
-        assertEquals(1.0d, convertValue(Double.class.getCanonicalName(), "1.0", classLoader));
-        assertEquals(1.0f, convertValue(float.class.getCanonicalName(), "1.0", classLoader));
-        assertEquals(1.0f, convertValue(Float.class.getCanonicalName(), "1.0", classLoader));
-        assertEquals(1.0d, convertValue(double.class.getCanonicalName(), "1.0d", classLoader));
-        assertEquals(1.0d, convertValue(Double.class.getCanonicalName(), "1.0d", classLoader));
-        assertEquals(1.0f, convertValue(float.class.getCanonicalName(), "1.0f", classLoader));
-        assertEquals(1.0f, convertValue(Float.class.getCanonicalName(), "1.0f", classLoader));
-        assertEquals(1.0d, convertValue(double.class.getCanonicalName(), "1.0D", classLoader));
-        assertEquals(1.0d, convertValue(Double.class.getCanonicalName(), "1.0D", classLoader));
-        assertEquals(1.0f, convertValue(float.class.getCanonicalName(), "1.0F", classLoader));
-        assertEquals(1.0f, convertValue(Float.class.getCanonicalName(), "1.0F", classLoader));
-        assertEquals('a', convertValue(char.class.getCanonicalName(), "a", classLoader));
-        assertEquals('a', convertValue(Character.class.getCanonicalName(), "a", classLoader));
-        assertEquals((short) 1, convertValue(short.class.getCanonicalName(), "1", classLoader));
-        assertEquals((short) 1, convertValue(Short.class.getCanonicalName(), "1", classLoader));
-        assertEquals("0".getBytes()[0], convertValue(byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader));
-        assertEquals("0".getBytes()[0], convertValue(Byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader));
-        assertEquals(LocalDate.of(2018, 5, 20), convertValue(LocalDate.class.getCanonicalName(), "2018-05-20", classLoader));
-        assertEquals(LocalDateTime.of(2017, 2, 18, 10, 30), convertValue(LocalDateTime.class.getCanonicalName(), "2017-02-18T10:30", classLoader));
-        assertEquals(LocalDateTime.of(1982, 4, 4, 0, 20, 0), convertValue(LocalDateTime.class.getCanonicalName(), "1982-04-04T00:20", classLoader));
-        assertEquals(LocalDateTime.of(1982, 10, 13, 2, 9, 0, 999999999), convertValue(LocalDateTime.class.getCanonicalName(), "1982-10-13T02:09:00.999999999", classLoader));
-        assertEquals(LocalTime.of(1,9, 0), convertValue(LocalTime.class.getCanonicalName(), "01:09:00", classLoader));
-        assertEquals(LocalTime.of(4,59, 07, 9999999), convertValue(LocalTime.class.getCanonicalName(), "04:59:07.009999999", classLoader));
-        assertEquals(LocalTime.of(23,45), convertValue(LocalTime.class.getCanonicalName(), "23:45", classLoader));
-        assertEquals(LocalTime.of(1,9, 0), convertValue(LocalTime.class.getCanonicalName(), "01:09:00", classLoader));
-        assertEquals(LocalTime.of(4,59, 07, 9999999), convertValue(LocalTime.class.getCanonicalName(), "04:59:07.009999999", classLoader));
-        assertEquals(EnumTest.FIRST, convertValue(EnumTest.class.getCanonicalName(), "FIRST", classLoader));
-        assertNull(convertValue(Float.class.getCanonicalName(), null, classLoader));
+        assertThat(convertValue(String.class.getCanonicalName(), "Test", classLoader)).isEqualTo("Test");
+        assertThat(convertValue(BigDecimal.class.getCanonicalName(), "13.33", classLoader)).isEqualTo(BigDecimal.valueOf(13.33));
+        assertThat(convertValue(BigDecimal.class.getCanonicalName(), "13", classLoader)).isEqualTo(BigDecimal.valueOf(13));
+        assertThat(convertValue(BigDecimal.class.getCanonicalName(), "1,232,113.33", classLoader)).isEqualTo(BigDecimal.valueOf(1232113.33));
+        assertThat(convertValue(BigDecimal.class.getCanonicalName(), "1232113.33", classLoader)).isEqualTo(BigDecimal.valueOf(1232113.33));
+        assertThat(convertValue(BigInteger.class.getCanonicalName(), "13.33", classLoader)).isEqualTo(BigInteger.valueOf(13));
+        assertThat(convertValue(BigInteger.class.getCanonicalName(), "13", classLoader)).isEqualTo(BigInteger.valueOf(13));
+        assertThat(convertValue(BigInteger.class.getCanonicalName(), "1,232,113.33", classLoader)).isEqualTo(BigInteger.valueOf(1232113));
+        assertThat(convertValue(BigInteger.class.getCanonicalName(), "1232113", classLoader)).isEqualTo(BigInteger.valueOf(1232113));
+        assertThat(convertValue(boolean.class.getCanonicalName(), "false", classLoader)).isEqualTo(false);
+        assertThat(convertValue(Boolean.class.getCanonicalName(), "true", classLoader)).isEqualTo(true);
+        assertThat(convertValue(int.class.getCanonicalName(), "1", classLoader)).isEqualTo(1);
+        assertThat(convertValue(Integer.class.getCanonicalName(), "1", classLoader)).isEqualTo(1);
+        assertThat(convertValue(long.class.getCanonicalName(), "1", classLoader)).isEqualTo(1L);
+        assertThat(convertValue(Long.class.getCanonicalName(), "1", classLoader)).isEqualTo(1L);
+        assertThat(convertValue(double.class.getCanonicalName(), "1", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(Double.class.getCanonicalName(), "1", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(float.class.getCanonicalName(), "1", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(Float.class.getCanonicalName(), "1", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(double.class.getCanonicalName(), "1.0", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(Double.class.getCanonicalName(), "1.0", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(float.class.getCanonicalName(), "1.0", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(Float.class.getCanonicalName(), "1.0", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(double.class.getCanonicalName(), "1.0d", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(Double.class.getCanonicalName(), "1.0d", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(float.class.getCanonicalName(), "1.0f", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(Float.class.getCanonicalName(), "1.0f", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(double.class.getCanonicalName(), "1.0D", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(Double.class.getCanonicalName(), "1.0D", classLoader)).isEqualTo(1.0d);
+        assertThat(convertValue(float.class.getCanonicalName(), "1.0F", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(Float.class.getCanonicalName(), "1.0F", classLoader)).isEqualTo(1.0f);
+        assertThat(convertValue(char.class.getCanonicalName(), "a", classLoader)).isEqualTo('a');
+        assertThat(convertValue(Character.class.getCanonicalName(), "a", classLoader)).isEqualTo('a');
+        assertThat(convertValue(short.class.getCanonicalName(), "1", classLoader)).isEqualTo((short) 1);
+        assertThat(convertValue(Short.class.getCanonicalName(), "1", classLoader)).isEqualTo((short) 1);
+        assertThat(convertValue(byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader)).isEqualTo("0".getBytes()[0]);
+        assertThat(convertValue(Byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader)).isEqualTo("0".getBytes()[0]);
+        assertThat(convertValue(LocalDate.class.getCanonicalName(), "2018-05-20", classLoader)).isEqualTo(LocalDate.of(2018, 5, 20));
+        assertThat(convertValue(LocalDateTime.class.getCanonicalName(), "2017-02-18T10:30", classLoader)).isEqualTo(LocalDateTime.of(2017, 2, 18, 10, 30));
+        assertThat(convertValue(LocalDateTime.class.getCanonicalName(), "1982-04-04T00:20", classLoader)).isEqualTo(LocalDateTime.of(1982, 4, 4, 0, 20, 0));
+        assertThat(convertValue(LocalDateTime.class.getCanonicalName(), "1982-10-13T02:09:00.999999999", classLoader)).isEqualTo(LocalDateTime.of(1982, 10, 13, 2, 9, 0, 999999999));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), "01:09:00", classLoader)).isEqualTo(LocalTime.of(1, 9, 0));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), "04:59:07.009999999", classLoader)).isEqualTo(LocalTime.of(4, 59, 07, 9999999));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), "23:45", classLoader)).isEqualTo(LocalTime.of(23, 45));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), "01:09:00", classLoader)).isEqualTo(LocalTime.of(1, 9, 0));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), "04:59:07.009999999", classLoader)).isEqualTo(LocalTime.of(4, 59, 07, 9999999));
+        assertThat(convertValue(EnumTest.class.getCanonicalName(), "FIRST", classLoader)).isEqualTo(EnumTest.FIRST);
+        assertThat(convertValue(Float.class.getCanonicalName(), null, classLoader)).isNull();
     }
 
     @Test
     public void revertValueTest() {
-        assertEquals("Test", revertValue("Test"));
-        assertEquals("10000.83", revertValue(BigDecimal.valueOf(10000.83)));
-        assertEquals("10000", revertValue(BigDecimal.valueOf(10000)));
-        assertEquals("10000", revertValue(BigInteger.valueOf(10000)));
-        assertEquals("false", revertValue(Boolean.FALSE));
-        assertEquals("true", revertValue(Boolean.TRUE));
-        assertEquals("false", revertValue(false));
-        assertEquals("true", revertValue(true));
-        assertEquals("1", revertValue(1));
-        assertEquals("1", revertValue(new Integer(1)));
-        assertEquals("1", revertValue(1L));
-        assertEquals("1", revertValue(new Long(1)));
-        assertEquals("1.1d", revertValue(1.1d));
-        assertEquals("1.1d", revertValue(new Double(1.1)));
-        assertEquals("NaN", revertValue(Double.NaN));
-        assertEquals("Infinity", revertValue(Double.POSITIVE_INFINITY));
-        assertEquals("-Infinity", revertValue(Double.NEGATIVE_INFINITY));
-        assertEquals("1.1f", revertValue(1.1f));
-        assertEquals("1.1f", revertValue(new Float(1.1)));
-        assertEquals("a", revertValue('a'));
-        assertEquals("a", revertValue(new Character('a')));
-        assertEquals("1", revertValue((short) 1));
-        assertEquals(String.valueOf("0".getBytes()[0]), revertValue("0".getBytes()[0]));
-        assertEquals(String.valueOf("0".getBytes()[0]), revertValue(new Byte("0".getBytes()[0])));
-        assertEquals("null", revertValue(null));
-        assertEquals("2018-10-20", revertValue(LocalDate.of(2018, 10, 20)));
-        assertEquals("2018-10-20T02:13:00", revertValue(LocalDateTime.of(2018, 10, 20, 2,13)));
-        assertEquals("2018-10-20T02:13:03", revertValue(LocalDateTime.of(2018, 10, 20, 2,13, 3)));
-        assertEquals("2018-10-20T02:13:03.000009999", revertValue(LocalDateTime.of(2018, 10, 20, 2,13, 3, 9999)));
-        assertEquals("02:13:00", revertValue(LocalTime.of(2,13)));
-        assertEquals("02:13:03", revertValue(LocalTime.of(2,13, 3)));
-        assertEquals("02:13:03.000009999", revertValue(LocalTime.of(2,13, 3, 9999)));
-        assertEquals("FIRST", revertValue(EnumTest.FIRST));
+        assertThat(revertValue("Test")).isEqualTo("Test");
+        assertThat(revertValue(BigDecimal.valueOf(10000.83))).isEqualTo("10000.83");
+        assertThat(revertValue(BigDecimal.valueOf(10000))).isEqualTo("10000");
+        assertThat(revertValue(BigInteger.valueOf(10000))).isEqualTo("10000");
+        assertThat(revertValue(Boolean.FALSE)).isEqualTo("false");
+        assertThat(revertValue(Boolean.TRUE)).isEqualTo("true");
+        assertThat(revertValue(false)).isEqualTo("false");
+        assertThat(revertValue(true)).isEqualTo("true");
+        assertThat(revertValue(1)).isEqualTo("1");
+        assertThat(revertValue(new Integer(1))).isEqualTo("1");
+        assertThat(revertValue(1L)).isEqualTo("1");
+        assertThat(revertValue(new Long(1))).isEqualTo("1");
+        assertThat(revertValue(1.1d)).isEqualTo("1.1d");
+        assertThat(revertValue(new Double(1.1))).isEqualTo("1.1d");
+        assertThat(revertValue(Double.NaN)).isEqualTo("NaN");
+        assertThat(revertValue(Double.POSITIVE_INFINITY)).isEqualTo("Infinity");
+        assertThat(revertValue(Double.NEGATIVE_INFINITY)).isEqualTo("-Infinity");
+        assertThat(revertValue(1.1f)).isEqualTo("1.1f");
+        assertThat(revertValue(new Float(1.1))).isEqualTo("1.1f");
+        assertThat(revertValue('a')).isEqualTo("a");
+        assertThat(revertValue(new Character('a'))).isEqualTo("a");
+        assertThat(revertValue((short) 1)).isEqualTo("1");
+        assertThat(revertValue("0".getBytes()[0])).isEqualTo(String.valueOf("0".getBytes()[0]));
+        assertThat(revertValue(new Byte("0".getBytes()[0]))).isEqualTo(String.valueOf("0".getBytes()[0]));
+        assertThat(revertValue(null)).isEqualTo("null");
+        assertThat(revertValue(LocalDate.of(2018, 10, 20))).isEqualTo("2018-10-20");
+        assertThat(revertValue(LocalDateTime.of(2018, 10, 20, 2, 13))).isEqualTo("2018-10-20T02:13:00");
+        assertThat(revertValue(LocalDateTime.of(2018, 10, 20, 2, 13, 3))).isEqualTo("2018-10-20T02:13:03");
+        assertThat(revertValue(LocalDateTime.of(2018, 10, 20, 2, 13, 3, 9999))).isEqualTo("2018-10-20T02:13:03.000009999");
+        assertThat(revertValue(LocalTime.of(2, 13))).isEqualTo("02:13:00");
+        assertThat(revertValue(LocalTime.of(2, 13, 3))).isEqualTo("02:13:03");
+        assertThat(revertValue(LocalTime.of(2, 13, 3, 9999))).isEqualTo("02:13:03.000009999");
+        assertThat(revertValue(EnumTest.FIRST)).isEqualTo("FIRST");
     }
 
     @Test
     public void convertAndRevertValue() {
-        assertEquals("Test", revertValue(convertValue(String.class.getCanonicalName(), "Test", classLoader)));
-        assertEquals("false", revertValue(convertValue(boolean.class.getCanonicalName(), "false", classLoader)));
-        assertEquals("true", revertValue(convertValue(Boolean.class.getCanonicalName(), "true", classLoader)));
-        assertEquals("1000", revertValue(convertValue(BigDecimal.class.getCanonicalName(), "1000", classLoader)));
-        assertEquals("1000.23", revertValue(convertValue(BigDecimal.class.getCanonicalName(), "1000.23", classLoader)));
-        assertEquals("1000.23", revertValue(convertValue(BigDecimal.class.getCanonicalName(), "1,000.23", classLoader)));
-        assertEquals("1000", revertValue(convertValue(BigInteger.class.getCanonicalName(), "1000", classLoader)));
-        assertEquals("1000", revertValue(convertValue(BigInteger.class.getCanonicalName(), "1000.23", classLoader)));
-        assertEquals("1000", revertValue(convertValue(BigInteger.class.getCanonicalName(), "1,000.23", classLoader)));
-        assertEquals("1", revertValue(convertValue(int.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1", revertValue(convertValue(Integer.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1", revertValue(convertValue(long.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1", revertValue(convertValue(Long.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(double.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(Double.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("NaN", revertValue(convertValue(double.class.getCanonicalName(), "NaN", classLoader)));
-        assertEquals("NaN", revertValue(convertValue(Double.class.getCanonicalName(), "NaN", classLoader)));
-        assertEquals("Infinity", revertValue(convertValue(double.class.getCanonicalName(), "Infinity", classLoader)));
-        assertEquals("Infinity", revertValue(convertValue(Double.class.getCanonicalName(), "Infinity", classLoader)));
-        assertEquals("-Infinity", revertValue(convertValue(double.class.getCanonicalName(), "-Infinity", classLoader)));
-        assertEquals("-Infinity", revertValue(convertValue(Double.class.getCanonicalName(), "-Infinity", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(float.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(Float.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(double.class.getCanonicalName(), "1.0", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(Double.class.getCanonicalName(), "1.0", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(float.class.getCanonicalName(), "1.0", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(Float.class.getCanonicalName(), "1.0", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(double.class.getCanonicalName(), "1.0d", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(Double.class.getCanonicalName(), "1.0d", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(float.class.getCanonicalName(), "1.0f", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(Float.class.getCanonicalName(), "1.0f", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(double.class.getCanonicalName(), "1.0D", classLoader)));
-        assertEquals("1.0d", revertValue(convertValue(Double.class.getCanonicalName(), "1.0D", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(float.class.getCanonicalName(), "1.0F", classLoader)));
-        assertEquals("1.0f", revertValue(convertValue(Float.class.getCanonicalName(), "1.0F", classLoader)));
-        assertEquals("a", revertValue(convertValue(char.class.getCanonicalName(), "a", classLoader)));
-        assertEquals("a", revertValue(convertValue(Character.class.getCanonicalName(), "a", classLoader)));
-        assertEquals("1", revertValue(convertValue(short.class.getCanonicalName(), "1", classLoader)));
-        assertEquals("1", revertValue(convertValue(Short.class.getCanonicalName(), "1", classLoader)));
-        assertEquals(Byte.toString("0".getBytes()[0]), revertValue(convertValue(byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader)));
-        assertEquals(Byte.toString("0".getBytes()[0]), revertValue(convertValue(Byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader)));
-        assertEquals("2018-05-20", revertValue(convertValue(LocalDate.class.getCanonicalName(), "2018-05-20", classLoader)));
-        assertEquals("2018-05-20T03:04:00", revertValue(convertValue(LocalDateTime.class.getCanonicalName(), "2018-05-20T03:04", classLoader)));
-        assertEquals("2018-05-20T03:04:01", revertValue(convertValue(LocalDateTime.class.getCanonicalName(), "2018-05-20T03:04:01", classLoader)));
-        assertEquals("2018-05-20T03:04:01.000009999", revertValue(convertValue(LocalDateTime.class.getCanonicalName(), "2018-05-20T03:04:01.000009999", classLoader)));
-        assertEquals("03:04:00", revertValue(convertValue(LocalTime.class.getCanonicalName(), "03:04", classLoader)));
-        assertEquals("03:04:01", revertValue(convertValue(LocalTime.class.getCanonicalName(), "03:04:01", classLoader)));
-        assertEquals("03:04:01.000009999", revertValue(convertValue(LocalTime.class.getCanonicalName(), "03:04:01.000009999", classLoader)));
-        assertEquals("FIRST", revertValue(convertValue(EnumTest.class.getCanonicalName(), "FIRST", classLoader)));
-        assertEquals("null", revertValue(convertValue(Float.class.getCanonicalName(), null, classLoader)));
+        assertThat(revertValue(convertValue(String.class.getCanonicalName(), "Test", classLoader))).isEqualTo("Test");
+        assertThat(revertValue(convertValue(boolean.class.getCanonicalName(), "false", classLoader))).isEqualTo("false");
+        assertThat(revertValue(convertValue(Boolean.class.getCanonicalName(), "true", classLoader))).isEqualTo("true");
+        assertThat(revertValue(convertValue(BigDecimal.class.getCanonicalName(), "1000", classLoader))).isEqualTo("1000");
+        assertThat(revertValue(convertValue(BigDecimal.class.getCanonicalName(), "1000.23", classLoader))).isEqualTo("1000.23");
+        assertThat(revertValue(convertValue(BigDecimal.class.getCanonicalName(), "1,000.23", classLoader))).isEqualTo("1000.23");
+        assertThat(revertValue(convertValue(BigInteger.class.getCanonicalName(), "1000", classLoader))).isEqualTo("1000");
+        assertThat(revertValue(convertValue(BigInteger.class.getCanonicalName(), "1000.23", classLoader))).isEqualTo("1000");
+        assertThat(revertValue(convertValue(BigInteger.class.getCanonicalName(), "1,000.23", classLoader))).isEqualTo("1000");
+        assertThat(revertValue(convertValue(int.class.getCanonicalName(), "1", classLoader))).isEqualTo("1");
+        assertThat(revertValue(convertValue(Integer.class.getCanonicalName(), "1", classLoader))).isEqualTo("1");
+        assertThat(revertValue(convertValue(long.class.getCanonicalName(), "1", classLoader))).isEqualTo("1");
+        assertThat(revertValue(convertValue(Long.class.getCanonicalName(), "1", classLoader))).isEqualTo("1");
+        assertThat(revertValue(convertValue(double.class.getCanonicalName(), "1", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(Double.class.getCanonicalName(), "1", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(double.class.getCanonicalName(), "NaN", classLoader))).isEqualTo("NaN");
+        assertThat(revertValue(convertValue(Double.class.getCanonicalName(), "NaN", classLoader))).isEqualTo("NaN");
+        assertThat(revertValue(convertValue(double.class.getCanonicalName(), "Infinity", classLoader))).isEqualTo("Infinity");
+        assertThat(revertValue(convertValue(Double.class.getCanonicalName(), "Infinity", classLoader))).isEqualTo("Infinity");
+        assertThat(revertValue(convertValue(double.class.getCanonicalName(), "-Infinity", classLoader))).isEqualTo("-Infinity");
+        assertThat(revertValue(convertValue(Double.class.getCanonicalName(), "-Infinity", classLoader))).isEqualTo("-Infinity");
+        assertThat(revertValue(convertValue(float.class.getCanonicalName(), "1", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(Float.class.getCanonicalName(), "1", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(double.class.getCanonicalName(), "1.0", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(Double.class.getCanonicalName(), "1.0", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(float.class.getCanonicalName(), "1.0", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(Float.class.getCanonicalName(), "1.0", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(double.class.getCanonicalName(), "1.0d", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(Double.class.getCanonicalName(), "1.0d", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(float.class.getCanonicalName(), "1.0f", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(Float.class.getCanonicalName(), "1.0f", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(double.class.getCanonicalName(), "1.0D", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(Double.class.getCanonicalName(), "1.0D", classLoader))).isEqualTo("1.0d");
+        assertThat(revertValue(convertValue(float.class.getCanonicalName(), "1.0F", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(Float.class.getCanonicalName(), "1.0F", classLoader))).isEqualTo("1.0f");
+        assertThat(revertValue(convertValue(char.class.getCanonicalName(), "a", classLoader))).isEqualTo("a");
+        assertThat(revertValue(convertValue(Character.class.getCanonicalName(), "a", classLoader))).isEqualTo("a");
+        assertThat(revertValue(convertValue(short.class.getCanonicalName(), "1", classLoader))).isEqualTo("1");
+        assertThat(revertValue(convertValue(Short.class.getCanonicalName(), "1", classLoader))).isEqualTo("1");
+        assertThat(revertValue(convertValue(byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader))).isEqualTo(Byte.toString("0".getBytes()[0]));
+        assertThat(revertValue(convertValue(Byte.class.getCanonicalName(), Byte.toString("0".getBytes()[0]), classLoader))).isEqualTo(Byte.toString("0".getBytes()[0]));
+        assertThat(revertValue(convertValue(LocalDate.class.getCanonicalName(), "2018-05-20", classLoader))).isEqualTo("2018-05-20");
+        assertThat(revertValue(convertValue(LocalDateTime.class.getCanonicalName(), "2018-05-20T03:04", classLoader))).isEqualTo("2018-05-20T03:04:00");
+        assertThat(revertValue(convertValue(LocalDateTime.class.getCanonicalName(), "2018-05-20T03:04:01", classLoader))).isEqualTo("2018-05-20T03:04:01");
+        assertThat(revertValue(convertValue(LocalDateTime.class.getCanonicalName(), "2018-05-20T03:04:01.000009999", classLoader))).isEqualTo("2018-05-20T03:04:01.000009999");
+        assertThat(revertValue(convertValue(LocalTime.class.getCanonicalName(), "03:04", classLoader))).isEqualTo("03:04:00");
+        assertThat(revertValue(convertValue(LocalTime.class.getCanonicalName(), "03:04:01", classLoader))).isEqualTo("03:04:01");
+        assertThat(revertValue(convertValue(LocalTime.class.getCanonicalName(), "03:04:01.000009999", classLoader))).isEqualTo("03:04:01.000009999");
+        assertThat(revertValue(convertValue(EnumTest.class.getCanonicalName(), "FIRST", classLoader))).isEqualTo("FIRST");
+        assertThat(revertValue(convertValue(Float.class.getCanonicalName(), null, classLoader))).isEqualTo("null");
     }
 
     @Test
     public void revertAndConvertValueTest() {
-        assertEquals("Test", convertValue(String.class.getCanonicalName(), revertValue("Test"), classLoader));
-        assertEquals(false, convertValue(boolean.class.getCanonicalName(), revertValue(false), classLoader));
-        assertEquals(Boolean.TRUE, convertValue(Boolean.class.getCanonicalName(), revertValue(Boolean.TRUE), classLoader));
-        assertEquals(BigInteger.valueOf(1000), convertValue(BigInteger.class.getCanonicalName(), revertValue(BigInteger.valueOf(1000)), classLoader));
-        assertEquals(BigDecimal.valueOf(1000), convertValue(BigDecimal.class.getCanonicalName(), revertValue(BigDecimal.valueOf(1000)), classLoader));
-        assertEquals(BigDecimal.valueOf(1000.13), convertValue(BigDecimal.class.getCanonicalName(), revertValue(BigDecimal.valueOf(1000.13)), classLoader));
-        assertEquals(1, convertValue(int.class.getCanonicalName(), revertValue(1), classLoader));
-        assertEquals(1, convertValue(Integer.class.getCanonicalName(), revertValue(1), classLoader));
-        assertEquals(1L, convertValue(long.class.getCanonicalName(), revertValue(1L), classLoader));
-        assertEquals(1L, convertValue(Long.class.getCanonicalName(), revertValue(1L), classLoader));
-        assertEquals(1d, convertValue(double.class.getCanonicalName(), revertValue(1), classLoader));
-        assertEquals(1d, convertValue(Double.class.getCanonicalName(), revertValue(1), classLoader));
-        assertEquals(1f, convertValue(float.class.getCanonicalName(), revertValue(1), classLoader));
-        assertEquals(1f, convertValue(Float.class.getCanonicalName(), revertValue(1), classLoader));
-        assertEquals(1d, convertValue(double.class.getCanonicalName(), revertValue(1.0), classLoader));
-        assertEquals(1d, convertValue(Double.class.getCanonicalName(), revertValue(1.0), classLoader));
-        assertEquals(1f, convertValue(float.class.getCanonicalName(), revertValue(1.0), classLoader));
-        assertEquals(1f, convertValue(Float.class.getCanonicalName(), revertValue(1.0), classLoader));
-        assertEquals(1d, convertValue(double.class.getCanonicalName(), revertValue(1.0d), classLoader));
-        assertEquals(1d, convertValue(Double.class.getCanonicalName(), revertValue(1.0d), classLoader));
-        assertEquals(1f, convertValue(float.class.getCanonicalName(), revertValue(1.0f), classLoader));
-        assertEquals(1f, convertValue(Float.class.getCanonicalName(), revertValue(1.0f), classLoader));
-        assertEquals(1d, convertValue(double.class.getCanonicalName(), revertValue(1.0D), classLoader));
-        assertEquals(1d, convertValue(Double.class.getCanonicalName(), revertValue(1.0D), classLoader));
-        assertEquals(1f, convertValue(float.class.getCanonicalName(), revertValue(1.0F), classLoader));
-        assertEquals(1f, convertValue(Float.class.getCanonicalName(), revertValue(1.0F), classLoader));
-        assertEquals('a', convertValue(char.class.getCanonicalName(), revertValue('a'), classLoader));
-        assertEquals('a', convertValue(Character.class.getCanonicalName(), revertValue('a'), classLoader));
-        assertEquals((short) 1, convertValue(short.class.getCanonicalName(), revertValue((short) 1), classLoader));
-        assertEquals((short) 1, convertValue(Short.class.getCanonicalName(), revertValue((short) 1), classLoader));
-        assertEquals("0".getBytes()[0], convertValue(byte.class.getCanonicalName(), revertValue("0".getBytes()[0]), classLoader));
-        assertEquals("0".getBytes()[0], convertValue(Byte.class.getCanonicalName(), revertValue("0".getBytes()[0]), classLoader));
-        assertEquals(LocalDate.of(2018, 10, 20), convertValue(LocalDate.class.getCanonicalName(), revertValue(LocalDate.of(2018, 10, 20)), classLoader));
-        assertEquals(LocalDateTime.of(2018, 10, 20,2,3), convertValue(LocalDateTime.class.getCanonicalName(), revertValue(LocalDateTime.of(2018, 10, 20,2,3)), classLoader));
-        assertEquals(LocalDateTime.of(2018, 10, 20,2,3,1), convertValue(LocalDateTime.class.getCanonicalName(), revertValue(LocalDateTime.of(2018, 10, 20, 2, 3, 1)), classLoader));
-        assertEquals(LocalDateTime.of(2018, 10, 20,2,3,1, 9999), convertValue(LocalDateTime.class.getCanonicalName(), revertValue(LocalDateTime.of(2018, 10, 20, 2, 3, 1, 9999)), classLoader));
-        assertEquals(LocalTime.of(2,3), convertValue(LocalTime.class.getCanonicalName(), revertValue(LocalTime.of(2,3)), classLoader));
-        assertEquals(LocalTime.of(2,3,1), convertValue(LocalTime.class.getCanonicalName(), revertValue(LocalTime.of(2, 3, 1)), classLoader));
-        assertEquals(LocalTime.of(2,3,1, 9999), convertValue(LocalTime.class.getCanonicalName(), revertValue(LocalTime.of(2, 3, 1, 9999)), classLoader));
-        assertEquals(EnumTest.FIRST, convertValue(EnumTest.class.getCanonicalName(), revertValue(EnumTest.FIRST), classLoader));
-        assertNull(convertValue(String.class.getCanonicalName(), revertValue(null), classLoader));
+        assertThat(convertValue(String.class.getCanonicalName(), revertValue("Test"), classLoader)).isEqualTo("Test");
+        assertThat(convertValue(boolean.class.getCanonicalName(), revertValue(false), classLoader)).isEqualTo(false);
+        assertThat(convertValue(Boolean.class.getCanonicalName(), revertValue(Boolean.TRUE), classLoader)).isEqualTo(Boolean.TRUE);
+        assertThat(convertValue(BigInteger.class.getCanonicalName(), revertValue(BigInteger.valueOf(1000)), classLoader)).isEqualTo(BigInteger.valueOf(1000));
+        assertThat(convertValue(BigDecimal.class.getCanonicalName(), revertValue(BigDecimal.valueOf(1000)), classLoader)).isEqualTo(BigDecimal.valueOf(1000));
+        assertThat(convertValue(BigDecimal.class.getCanonicalName(), revertValue(BigDecimal.valueOf(1000.13)), classLoader)).isEqualTo(BigDecimal.valueOf(1000.13));
+        assertThat(convertValue(int.class.getCanonicalName(), revertValue(1), classLoader)).isEqualTo(1);
+        assertThat(convertValue(Integer.class.getCanonicalName(), revertValue(1), classLoader)).isEqualTo(1);
+        assertThat(convertValue(long.class.getCanonicalName(), revertValue(1L), classLoader)).isEqualTo(1L);
+        assertThat(convertValue(Long.class.getCanonicalName(), revertValue(1L), classLoader)).isEqualTo(1L);
+        assertThat(convertValue(double.class.getCanonicalName(), revertValue(1), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(Double.class.getCanonicalName(), revertValue(1), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(float.class.getCanonicalName(), revertValue(1), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(Float.class.getCanonicalName(), revertValue(1), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(double.class.getCanonicalName(), revertValue(1.0), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(Double.class.getCanonicalName(), revertValue(1.0), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(float.class.getCanonicalName(), revertValue(1.0), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(Float.class.getCanonicalName(), revertValue(1.0), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(double.class.getCanonicalName(), revertValue(1.0d), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(Double.class.getCanonicalName(), revertValue(1.0d), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(float.class.getCanonicalName(), revertValue(1.0f), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(Float.class.getCanonicalName(), revertValue(1.0f), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(double.class.getCanonicalName(), revertValue(1.0D), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(Double.class.getCanonicalName(), revertValue(1.0D), classLoader)).isEqualTo(1d);
+        assertThat(convertValue(float.class.getCanonicalName(), revertValue(1.0F), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(Float.class.getCanonicalName(), revertValue(1.0F), classLoader)).isEqualTo(1f);
+        assertThat(convertValue(char.class.getCanonicalName(), revertValue('a'), classLoader)).isEqualTo('a');
+        assertThat(convertValue(Character.class.getCanonicalName(), revertValue('a'), classLoader)).isEqualTo('a');
+        assertThat(convertValue(short.class.getCanonicalName(), revertValue((short) 1), classLoader)).isEqualTo((short) 1);
+        assertThat(convertValue(Short.class.getCanonicalName(), revertValue((short) 1), classLoader)).isEqualTo((short) 1);
+        assertThat(convertValue(byte.class.getCanonicalName(), revertValue("0".getBytes()[0]), classLoader)).isEqualTo("0".getBytes()[0]);
+        assertThat(convertValue(Byte.class.getCanonicalName(), revertValue("0".getBytes()[0]), classLoader)).isEqualTo("0".getBytes()[0]);
+        assertThat(convertValue(LocalDate.class.getCanonicalName(), revertValue(LocalDate.of(2018, 10, 20)), classLoader)).isEqualTo(LocalDate.of(2018, 10, 20));
+        assertThat(convertValue(LocalDateTime.class.getCanonicalName(), revertValue(LocalDateTime.of(2018, 10, 20, 2, 3)), classLoader)).isEqualTo(LocalDateTime.of(2018, 10, 20, 2, 3));
+        assertThat(convertValue(LocalDateTime.class.getCanonicalName(), revertValue(LocalDateTime.of(2018, 10, 20, 2, 3, 1)), classLoader)).isEqualTo(LocalDateTime.of(2018, 10, 20, 2, 3, 1));
+        assertThat(convertValue(LocalDateTime.class.getCanonicalName(), revertValue(LocalDateTime.of(2018, 10, 20, 2, 3, 1, 9999)), classLoader)).isEqualTo(LocalDateTime.of(2018, 10, 20, 2, 3, 1, 9999));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), revertValue(LocalTime.of(2, 3)), classLoader)).isEqualTo(LocalTime.of(2, 3));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), revertValue(LocalTime.of(2, 3, 1)), classLoader)).isEqualTo(LocalTime.of(2, 3, 1));
+        assertThat(convertValue(LocalTime.class.getCanonicalName(), revertValue(LocalTime.of(2, 3, 1, 9999)), classLoader)).isEqualTo(LocalTime.of(2, 3, 1, 9999));
+        assertThat(convertValue(EnumTest.class.getCanonicalName(), revertValue(EnumTest.FIRST), classLoader)).isEqualTo(EnumTest.FIRST);
+        assertThat(convertValue(String.class.getCanonicalName(), revertValue(null), classLoader)).isNull();
     }
 
     @Test
@@ -407,10 +403,10 @@ public class ScenarioBeanUtilTest {
 
     @Test
     public void loadClassTest() {
-        assertEquals(String.class, loadClass(String.class.getCanonicalName(), classLoader));
-        assertEquals(int.class, loadClass(int.class.getCanonicalName(), classLoader));
-        assertEquals(RuleScenarioRunnerHelperTest.class, loadClass(RuleScenarioRunnerHelperTest.class.getCanonicalName(), classLoader));
-        assertEquals(EnumTest.class, loadClass(EnumTest.class.getCanonicalName(), classLoader));
+        assertThat(loadClass(String.class.getCanonicalName(), classLoader)).isEqualTo(String.class);
+        assertThat(loadClass(int.class.getCanonicalName(), classLoader)).isEqualTo(int.class);
+        assertThat(loadClass(RuleScenarioRunnerHelperTest.class.getCanonicalName(), classLoader)).isEqualTo(RuleScenarioRunnerHelperTest.class);
+        assertThat(loadClass(EnumTest.class.getCanonicalName(), classLoader)).isEqualTo(EnumTest.class);
 
         assertThatThrownBy(() -> loadClass(null, classLoader))
                 .isInstanceOf(ScenarioException.class)
